--- a/Task Webapp/td-test/index.html
+++ b/Task Webapp/td-test/index.html
@@ -2,9 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TD Test</title>
+    <meta
+      name="description"
+      content="TaskDesk helps you stay focused by organizing tasks, priorities, and deadlines in one place. Plan smarter and complete more, effortlessly."
+    />
+    <link rel="canonical" href="/" />
+
+    <!-- Favicon / Icons -->
+    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="apple-touch-icon" href="/logo.png" />
+
+    <!-- Social (Open Graph / Twitter) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="TaskDesk — Focus. Plan. Complete." />
+    <meta
+      property="og:description"
+      content="Task Desk helps you stay focused by managing tasks, setting priorities, and organizing everything in one place. Boost productivity effortlessly."
+    />
+    <meta property="og:image" content="/summary.png" />
+    <meta property="og:url" content="/" />
+    <meta name="twitter:card" content="summary" />
   </head>
   <body>
     <div id="root"></div>
