After Diploma Session Commit

--- a/Task Webapp/td-test/index.html
+++ b/Task Webapp/td-test/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TD Test</title>
+    <title>Task Desk - KS</title>
     <meta
       name="description"
       content="TaskDesk helps you stay focused by organizing tasks, priorities, and deadlines in one place. Plan smarter and complete more, effortlessly."
     />
-    <link rel="canonical" href="/" />
 
     <!-- Favicon / Icons -->
     <link rel="icon" type="image/png" href="/logo.png" />
@@ -22,7 +21,6 @@
       content="Task Desk helps you stay focused by managing tasks, setting priorities, and organizing everything in one place. Boost productivity effortlessly."
     />
     <meta property="og:image" content="/summary.png" />
-    <meta property="og:url" content="/" />
     <meta name="twitter:card" content="summary" />
   </head>
   <body>
