--- a/Task Webapp/batch-2/index.html
+++ b/Task Webapp/batch-2/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Batch - 2</title>
+
+    <!-- Favicon / Icons-->
+    <link rel="icon" href="/logo.png" type="image/png" />
+    <link rel="apple-touch-icon" href="/logo.png" />
+
+    <!--Social (Open Graph)-->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="TaskDesk - Final Session" />
+    <meta
+      property="og:description"
+      content="Task Desk Helps you to Stay Focused by Managing Task , Setting Priorities and Organinzing Everything in one Place , Boost Productivity Effortlessly"
+    />
+    <meta property="og:image" content="/summary.png" />
+    <meta property="og:url" content="/" />
+    <meta name="twitter:card" content="summary" />
   </head>
   <body>
     <div id="root"></div>
